# utbm_robocar_dataset

./: .travis.yml  CMakeLists.txt  README.md  index.html  package.xml
LeGO-LOAM/: README.md
LeGO-LOAM/LeGO-LOAM/include/: utility.h
LeGO-LOAM/LeGO-LOAM/launch/: lego_loam_utbm.rviz
baselines/LeGO-LOAM/LeGO-LOAM/launch/: lego_loam_utbm.launch
baselines/ground_truth/: 20180719_rtk.csv  20180719_rtk.txt
baselines/lego_loam/: lego_loam_20180719.txt  lego_loam_loop_closure_20180719.txt
baselines/loam_velodyne/: loam_velodyne_20180719.txt
baselines/loam_velodyne/rviz_cfg/: loam_velodyne_utbm.rviz
baselines/utbm_pose_estimation/: CMakeLists.txt  README.md  package.xml  utbm_pose_estimation_nodelets.xml
baselines/utbm_pose_estimation/include/utbm_pose_estimation/: pose_estimation_node.h
baselines/utbm_pose_estimation/launch/: utbm_pose_estimation.launch
baselines/utbm_pose_estimation/rviz_cfg/: utbm_pose_estimation.rviz
baselines/utbm_pose_estimation/src/: main.cpp  pose_estimation_node.cpp  pose_estimation_nodelet.cpp
camera_info/: bb2_stereo_camera_LR_left.yaml  bb2_stereo_camera_LR_right.yaml  bb_xb3_center.yaml  bb_xb3_left.yaml  bb_xb3_right.yaml  bb_xb3_stereo_camera_CR_left.yaml  bb_xb3_stereo_camera_CR_right.yaml  bb_xb3_stereo_camera_LC_left.yaml  bb_xb3_stereo_camera_LC_right.yaml  bb_xb3_stereo_camera_LR_left.yaml  bb_xb3_stereo_camera_LR_right.yaml  pixelink_left.yaml  pixelink_right.yaml
drivers/magellan_proflex500/magellan_proflex500_driver/: CMakeLists.txt  package.xml
drivers/magellan_proflex500/utbm_nmea_msgs/: CMakeLists.txt
imu/: imu-test.bag
launch/: README.md  utbm_dataset_play.launch  utbm_robocar_dataset.launch  utbm_robocar_dataset.rviz
loam_velodyne/: README.md
loam_velodyne/launch/: loam_velodyne_utbm.launch
loam_velodyne/src/lib/: LaserMapping.cpp  MultiScanRegistration.cpp
magellan_proflex500/magellan_proflex500_driver/src/: magellan_proflex500_driver.cpp
magellan_proflex500/utbm_nmea_msgs/: package.xml
magellan_proflex500/utbm_nmea_msgs/msg/: Gpgst.msg
