<?xml version="1.0"?>
<package>
  <name>utbm_nmea_msgs</name>
  
  <version>0.1.0</version>
  <description>ROS messages related to data in the NMEA format. This package is supplement to the nmea_msgs.</description>
  
  <maintainer email="jocelyn.buisson@utbm.fr">Jocelyn Buisson</maintainer>
  <maintainer email="zhi.yan@utbm.fr">Zhi Yan</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
  </export>
</package>
