<?xml version="1.0"?>
<package>
  <name>magellan_proflex500_driver</name>

  <version>0.1.0</version>

  <description>Package to send data requirements for Magellan ProFlex 500 GNSS Receiver.</description>
  
  <maintainer email="jocelyn.buisson@utbm.fr">Jocelyn Buisson</maintainer>
  <maintainer email="zhi.yan@utbm.fr">Zhi Yan</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>nmea_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nmea_msgs</run_depend>
  
  <export>
  </export>
</package>
